# pyemaps

./: .gitignore  CONTRIBUTING.md  COPYING  MANIFEST.in  README.md  __config__.py  __init__.py  __main__.py  bt.py  build.bat  build_pyemaps  build_pyemaps.py  crystals.py  crystals.save  ddiffs.py  display.py  em.py  emcontrols.py  errors.py  fileutils.py  import_calc_sanity  intel.cfg  kdiffs.py  kdiffs.save  license.txt  local.bat  models.py  out.txt  publish.bat  pypi_twine.cfg  pyproject.toml  result.txt  sanity.bat  sanity_build  setup.cfg  setup.py  setup_lin.cfg  setup_win.cfg  si_dif.py  stackimg.py  (+2 more)
.github/workflows/: pyemaps_nightly.yml
CifFile/src/: CifFile.html  CifFile_module.nw  CifFile_module.py  Makefile  StarFile.html  TypeContentsParser.html  YappsStarParser.html  yapps3_compiled_rt.py
cdata/: Aluminium.xtl  AluminiumOxide.xtl  Aluminium_FCC.xtl  BariumTitanate_180k.xtl  BariumTitanate_270k.xtl  BariumTitanate_Tetra.xtl  BiMnO3.xtl  Boron_Tetra.xtl  CadmiumSelenide_Hex.xtl  CadmiumSulfide_Cubic.xtl  CadmiumSulfide_Hex.xtl  Chromium_BCC.xtl  CopperOxide.xtl  Copper_FCC.xtl  Cu2O_Cuprite.xtl  Diamond.xtl  ErbiumPyrogermanate.xtl  EuAl3.cif  FePd_Tetra.xtl  FeS2_Pyrite.xtl  GalliumAntimonide.xtl  GalliumArsenide.xtl  GalliumNitride.xtl  Germanium.xtl  Gold_FCC.xtl  IndiumArsenide.xtl  LaMnO3.xtl  LeadZirconateTitanate.xtl  Li2MnO3.xtl  NaFeO2.xtl  Nb3Sn.xtl  Silicon.xtl  StrontiumTitanate.xtl  TelluriumDioxide.xtl  TinDioxide_RT.xtl  TitaniumDioxide_Anatase.xtl  TitaniumDioxide_Rutile.xtl  TungstenDiselenide.xtl  VanadiumDioxide_RT.xtl  ZincOxide.xtl  (+3 more)
cifdata/: 1010110.cif  1010117.cif  1010120.cif  1010126.cif  1010129.cif  1010131.cif  1010132.cif  1010135.cif  1010142.cif  1010143.cif  1010147.cif  1010150.cif  1010151.cif  1010155.cif  1010158.cif  1010161.cif  1010162.cif  1010164.cif  1010175.cif  1010178.cif  1010189.cif  1010195.cif
diffract/: __init__.py  bloch_dec.py  comp.json  csf_dec.py  dif_dec.py  dpgen_dec.py  mxtal_dec.py  powder_dec.py  setup.cfg  setup_diffract.py  stereo_dec.py
docs/: .buildinfo  alpha_rn_archive.md  faq.html  genindex.html  index.html  index.md  license.html  modules.html  objects.inv  overview.html  py-modindex.html  pyemaps.crystals.html  pyemaps.ddiffs.html  pyemaps.diffract.bloch_dec.html  pyemaps.diffract.csf_dec.html  pyemaps.diffract.dif_dec.html  pyemaps.diffract.dpgen_dec.html  pyemaps.diffract.emaps.html  pyemaps.diffract.html  pyemaps.diffract.mxtal_dec.html  pyemaps.diffract.powder_dec.html  pyemaps.diffract.stereo_dec.html  pyemaps.display.html  pyemaps.emcontrols.html  pyemaps.errors.html  pyemaps.fileutils.html  pyemaps.html  pyemaps.kdiffs.html  pyemaps.scattering.html  pyemaps.scattering.scattering.html  pyemaps.spg.html  pyemaps.spg.spg.html  pyemaps_modules.html  requirements.html  rn.html  search.html  searchindex.js  usage.html  visualization.html
docs/_sources/: faq.rst.txt  index.rst.txt  license.rst.txt  modules.rst.txt  overview.rst.txt  pyemaps.crystals.rst.txt  pyemaps.diffract.bloch_dec.rst.txt  pyemaps.diffract.csf_dec.rst.txt  pyemaps.diffract.dif_dec.rst.txt  pyemaps.diffract.dpgen_dec.rst.txt  pyemaps.diffract.emaps.rst.txt  pyemaps.diffract.mxtal_dec.rst.txt  pyemaps.diffract.powder_dec.rst.txt  pyemaps.diffract.stereo_dec.rst.txt  pyemaps.emcontrols.rst.txt  pyemaps.fileutils.rst.txt  pyemaps.rst.txt  pyemaps.scattering.rst.txt  pyemaps_modules.rst.txt  rn.rst.txt  usage.rst.txt  visualization.rst.txt
docs/_static/: documentation_options.js
docs/archive/: alpha_rn_archive.md
docs/source/: conf.py  faq.rst  index.rst  license.rst  modules.rst  overview.rst  pyemaps.ddiffs.rst  pyemaps.diffract.rst  pyemaps.display.rst  pyemaps.errors.rst  pyemaps.kdiffs.rst  pyemaps.scattering.scattering.rst  pyemaps.spg.rst  pyemaps.spg.spg.rst  requirements.rst  rn.rst  usage.rst  visualization.rst
samples/: adf.py  al.img  al_dpgen.py  al_ediom.py  au_ediom.py  convert.py  convert_image.py  dm_diff.py  mask.im3  powder.py  pyplot_dm_si_diff.py  pyplot_dm_si_diff_color.py  raw.img  run_csf.py  sample_base.py  si_bloch.py  si_cl.py  si_constructor.py  si_csf.py  si_deflection.py  si_dif.py  si_dif_cbed.py  si_diff.py  si_diff_cbed.py  si_dpgen.py  si_lacbed.py  si_mxtal.py  si_pyemaps.py  si_rawblochimgs.py  si_scm.py  si_stereo.py  si_tilt.py  si_tilt_cbed.py  si_tilt_normal.py  si_vt.py  si_zone.py
samples/deprecated/: CoSb3_Skutterudite.xtl  Pentacene.xtl  SiAlONa.xtl  bt.py  bt1.py  ddif_demo_mm.py  demo.py  display_lin.py  dm_bloch.py  dm_diff.py  ediom.py  kdif_demo_mm.py  local.py  mp.py  pyplot_dm_si_diff.py  si_bloch_docs.py  si_rawblochimgs.py  stereo_demo_mm.py  test_kddif.py
scattering/: __init__.py  sct_dec.py  setup.cfg  setup_scattering.py
spg/: __init__.py  setup_spg.py  spg_dec.py
test/: githut-sanity.bat  local-sanity.bat  run_features.py  run_samples.py  run_unittests.py  sanity_base.py
test/cifdata/: 1010100.cif  1010101.cif  1010102.cif  1010103.cif  1010104.cif  1010105.cif  1010106.cif  1010107.cif  1010108.cif  1010109.cif  1010111.cif  1010112.cif  1010113.cif  1010114.cif  1010115.cif  1010116.cif  1010118.cif  1010119.cif  1010121.cif  1010122.cif  1010123.cif  1010124.cif  1010125.cif  1010127.cif  1010128.cif  1010130.cif  1010133.cif  1010134.cif  1010136.cif  1010137.cif  1010138.cif  1010139.cif  1010140.cif  1010141.cif  (+44 more)
(+62 files in other folders)
