[metadata]
version                 = 0.1.1
author                  = EMLab Solutions, Inc.
author_email            = support@emlabsoftware.com
license                 = OSI Approved :: MIT License
url                     = https://www.emlabsolutions.com

[build_ext]
fcompiler               = gnu95
include_dirs            = emaps
libraries               = gomp
library_dirs            = emaps
# link_objects            = write_dpbin.o
define                  = DWOS

[options]
python_requires         = >=3.6
install_requires        =numpy
                         matplotlib
# extra_f90_compile_args = -m64       
#                          -Wno-tabs
#                          -Warray-bounds
#                          -fdefault-double-8
#                          -fdefault-real-8
#                          -fopenmp
#                          -fcheck=all,no-array-temps
#                          -cpp
#                          -Wall
#                          -O3
# f2py_options = []
# [build_src]
# build_src = ['pyemaps/diffract']