[metadata]
version                 = 0.2.5

author                  = EMLab Solutions, Inc.
author_email            = support@emlabsoftware.com

classifiers             = Development Status :: 2 - Pre-Alpha
                          Programming Language :: Python :: 3.6
                          Programming Language :: Python :: 3.7
                          Programming Language :: Python :: 3.8
                          Programming Language :: Python :: 3.9
                          Programming Language :: Python :: 3.10
                          Programming Language :: Python :: 3.11
                          Operating System :: Microsoft :: Windows
                          Topic :: Software Development :: Libraries :: Python Modules
                          Intended Audience :: Science/Research 
                          License :: Free for non-commercial use
                          License :: OSI Approved :: GNU General Public License v3 (GPLv3)

keywords                = transmission
                          electron
                          diffraction
                          simulation
                          crystallography
                          python

url                     = https://www.emlabsolutions.com

[build_ext]
fcompiler               = gnu95
include_dirs            = emaps
libraries               = gomp
library_dirs            = emaps
# link_objects            = write_dpbin.o
define                  = DWOS

[options]
python_requires         = >=3.6
install_requires        =numpy
                         matplotlib
# extra_f90_compile_args = -m64       
#                          -Wno-tabs
#                          -Warray-bounds
#                          -fdefault-double-8
#                          -fdefault-real-8
#                          -fopenmp
#                          -fcheck=all,no-array-temps
#                          -cpp
#                          -Wall
#                          -O3
# f2py_options = []
# [build_src]
# build_src = ['pyemaps/diffract']