[metadata]

author                  = EMLab Solutions, Inc.
author_email            = support@emlabsoftware.com

classifiers             = Development Status :: 3 - Alpha
                          Programming Language :: Python :: 3.6
                          Programming Language :: Python :: 3.7
                          Programming Language :: Python :: 3.8
                          Programming Language :: Python :: 3.9
                          Programming Language :: Python :: 3.10
                          Programming Language :: Python :: 3.11
                          Operating System :: Microsoft :: Windows
                          Topic :: Software Development :: Libraries :: Python Modules
                          Intended Audience :: Science/Research 
                          License :: Free for non-commercial use
                          License :: OSI Approved :: GNU General Public License v3 (GPLv3)

keywords                = Transmission
                          Electron
                          Diffraction
                          Simulation
                          Crystallography
                          Python

url                     = https://www.emlabsolutions.com

[options]
python_requires         = >= 3.6
install_requires        =numpy >= 1.21.2
                         matplotlib >= 3.2.1
                         PyCifRW == 4.4.3


[build_ext]
fcompiler               = intelvem
include_dirs            = emaps
define                  = WOS
