[metadata]
version                 = 1.0.0
author                  = EMLab Solutions, Inc.
author_email            = support@emlabsoftware.com
license                 = License :: Free for non-commercial use
url                     = https://www.emlabsolutions.com

# [build_ext]
# # fcompiler               = gnu95
# include_dirs            = .
# libraries               = gomp
# # library_dirs            = emaps
# link_objects            = write_dpbin.o
# define                  = DWOS

# [options]
# python_requires = >=3.6
# install_requires        =numpy
#                          matplotlib